# anubis

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .langgraph copy.json  .langgraph dev.json  .langgraph main.json  .port.example  Application5.md  BUG.md  BUG_1.MD  BUG_2.MD  BUG_CONTEXT.MD  CLAUDE.md  Dockerfile  Dockerfile.anubis.base  Dockerfile.update.bak  GOALS.md  MILESTONES.md  README.md  Untitled  _.json  _BUG_NATURAL_LANGUAGE.md  _COMPETITIVE_RESEARCH.md  _FEATURE.MD  _FEATURE.md  _FEATURES.md  _NAMESPACE_GUIDANCE.md  _NATURAL_LANGUAGE_FACT_EDITING_GUIDANCE.md  _OVERALL_PREPROCESSING_PROCESS.md  _OVERALL_SYSTEM.md  _UPDATE.MD  _bug.md  _error.md  _feature.md  _sample.md  _system_prompt.txt  _test.json  (+51 more)
.claude/: settings.json
.ignore/: AsyncSpeakerDiarization.py
_MAJOR_UPDATES/: _ADAPTER_FEATURE.MD  _METERING_FEATURE.md
_test_data/: y_combinator.md
_test_data/lex/: _lex_fridman_test_data.md
_test_data/shivon_zilis/: _shivon_zilis_test_data.md  confirmed_search_results_list.txt
adapters/: README.md
adapters/one_B_avatar_singleturn/: README.md  adapter_config.json  chat_template.jinja
api/: Dockerfile  README.md  docker-compose.yml  render.yaml  requirements.txt  webapp.py
api/src/: main.py
cloudflare/: README.md  cloudflared.service  config.yml  install.sh
data/: __init__.py  build_baseline_features_arr.py
deploy/: pgadmin-config_system.py
features/: RAG_ACCURACY_IMPROVEMENTS.md  _CURRENT_ACTION_ITEM.md  _KEY_DELIVERABLES.md  _integrate_api_to_frontend.md  _morning_ideas.md  _todo.md  adapters.md  analysis.md  build_a_realtime_voice_agent.md  conversation_semantic_chunking_for_indexing.md  conversation_summarization.md  create_images_based_on_reference_images_depending_on_emtion(similar_to_emoji).md  create_restaraunts.md  data_analysis_agent_and_a_slack_agent_interface.md  data_ingestion_pipeline.md  data_source_collection_and_integration.md  deep_research_of_persona.md  discord_frontend.md  document_processing_refactor.md  emotion.md  evaluate_authenticity_of_responses.md  expandable_media_jobs_from_playlist.md  extract_text_from_audio.md  frontend.md  frontend_usage_and_convenience.md  generative_images_and_videos.md  generative_video_and_genie3_world_models.md  geo-located_avatars.md  health_data_analysis.md  ignore_respond_in_group_stream.md  improve_retrieval_quality.md  kickstarter.md  list_media_jobs.md  login_and_pull_data_and_subscribe_from_social_media.md  mass-commit.md  metered_pipeline_for_request_use_and_subscription_tiers.md  milestones-roadmap.md  neural_data_integration.md  neural_data_integration_important.md  nice_to_have_features.md  (+16 more)
features/adapters/: adapters.md  fine_tuning.md
features/bugs/: backend_bugs.md  bug_improper_file_renaming_from_url.md  fp_facts_from_speaker_diarization.md  frontend_bugs.md  image_description.md  learn_information_about_the_user.md  long_context.md  reference_audio.md  update_avatar_with_media_success_on_silent_failure.md  update_learned_information.md
features/capabilities/: build_a_realtime_voice_agent.md  deep_research_of_persona.md  discord.md  email_features.md  health_data_analysis.md  mcp.md  slack.md  text_messaging_features.md  twitch.md
features/moving_forward/: forward_direction.md
features/performance/: scan_for_a_corpus_of_stylistic_markers.md
features/plans/: authenticity_learning_guide.md  competition.md  deep-research-report.md  product_market_research.md  users.md
features/prompt_drafts/: _1authenticity_evaluation.md  _2pyscho_analysis_pipeline.md  _3multiple_urls_uploaded.md  _4deep_agent_for_analysis_reports_os_query_summarization.md  _5metering.md  _6social_auth.md  _7data_analysis_agent.md  __morning_ideas.md  _authenticity.md  _data_processing_hierarchy.md  _style.md  _upload_document.md  deep_research.md  metering.md  morning_ideas.md  reference_audio.md  summarization.md  voice_agent.md
markdown/: ABOUT.MD  MILESTONES.md  _data_processing_formatting_classification_prompt_request.md  bug.md  bugs.md  challenge.md  data_analysis_process.md  features.md  langgraph.md  note.md  objectives.md  prompt.md  prompt_guide.md  question.md  questions.md  scratch.md  task.md  temp.md  test.json  today.md  todo.md  todo_list.md  tools.md  vision.md
markdown/data_processing_pipeline_project/: _data_processing_formatting_classification_prompt_request_original_script.md  complete_end_to_end_of_entire_project.md  current_completed_code_in_data_pipeline.md  example_model_with_structured_output.md  full_data_pipeline_process.md  to_build.md
markdown/notes/: notes.md
market-research/: deep-research-report.md  financing.md  market-size-neuralnexus.md  milestones-roadmap.md
metrics/: METRICS.MD  grafana_setup.md
metrics/sql/: grafana_visualizations.sql  metrics_schema.sql
postgres/: docker-compose.yml
prompts/: system_prompt.py
research/: 00_README.md  01_current_state_audit.md  02_phase1_aws_free_tier_single_avatar.md  03_phase2_azure_kubernetes_scale_plan.md  04_token_workload_cost_model.md  05_kickstarter_budget_lineitems.md
research/data_analysis_slack_agent/: 00_overview.md  01_data_source_matrix.md  02_context_additions.md  03_slack_interface.md  04_aar_prompting.md  05_proposed_layout.md  README.md
scripts/: pgadmin_save_check.py  test_multifact_learning.py
sql/: count_unique_files_per_assistant.sql  ground_truth_features_by_assistant.sql  identity_memory_by_assistant.sql  identity_namespace_by_assistant.sql  list_unique_files_per_assistant.sql  metrics_schema.sql  page_content_by_assistant.sql  page_content_by_assistant_and_filename.sql  page_content_by_assistant_and_namespace.sql  page_content_lookup_by_assistant.sql  scratch.md  scratch.sql  search_store_metadata_per_assistant.sql
src/agent/: __init__.py  context.py  graph.py  state.py  tools.py  utils.py  webapp.py
src/anubis/: __init__.py  graph.py  graph_research.py  utils.py  webapp.py
src/api/: .env.example  dependencies.py  docker-compose.yml  media_jobs.py  webapp.py
static/: PlutchikFeature_image_base64.txt
tests/: conftest.py
(+212 files in other folders)
