[project]
name = "anubis"
version = "0.0.1"
description = "Anubis graph"
authors = [
    { name = "Evan Woods", email = "22337004+efwoods@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bert-score>=0.3.13",
    "fastapi>=0.135.1",
    "huggingface-hub>=0.36.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.0.10",
    "langsmith>=0.7.9",
    "llama-api-client>=0.6.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "rouge>=1.0.1",
    "sentence-transformers>=5.2.3",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/anubis"
"agent" = "src/anubis"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "debugpy>=1.8.20",
    "langgraph-cli[inmem]>=0.4.14",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "nltk>=3.9.3",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.3",
]
