[project]
name = "anubis"
version = "0.0.1"
description = "Anubis graph"
authors = [
    { name = "Evan Woods", email = "22337004+efwoods@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "anyio>=4.12.1",
    "auth0-fastapi-api>=1.0.0b6",
    "beautifulsoup4>=4.14.3",
    "bert-score>=0.3.13",
    "debugpy>=1.8.20",
    "deepagents>=0.6.7",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "firebase-admin>=7.3.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-huggingface>=1.2.0",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-openai>=1.1.10",
    "langchain-together>=0.4.0",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-cli[inmem]>=0.4.19",
    "langsmith>=0.7.9",
    "llama-api-client>=0.6.0",
    "moviepy>=2.2.1",
    "nltk>=3.9.3",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "pronouncing>=0.2.0",
    "psycopg[binary]>=3.3.0",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.31.0",
    "rouge>=1.0.1",
    "scipy>=1.13.0",
    "sentence-transformers>=5.2.3",
    "slack-sdk>=3.41.0",
    "spacy>=3.8.0",
    "streamlit>=1.35.0",
    "stripe>=15.0.0",
    "supabase>=2.28.3",
    "yt-dlp>=2026.3.17",
    "tiktoken>=0.12.0",
    "tzdata>=2025.1",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "soundfile>=0.13.1",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "rich>=15.0.0",
    "textstat>=0.7.13",
    "lexicalrichness>=0.5.1",
    "faststylometry>=1.0.5",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/anubis"
"agent" = "src/anubis"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "langgraph-cli[inmem]>=0.4.14",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "nltk>=3.9.3",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.3",
]
